2012-08-06  Mark Wielaard  <mjw@redhat.com>

	* test/tapset/jstaptest.pl (probestrings): Expect non-zero value
	for hotspot.jni.NewObjectA.return.

2012-08-03  Mark Wielaard  <mjw@redhat.com>

	* Makefile.am (check-tapset-probes): New target.
	(check-tapset-jstack): Likewise.
	(check-tapset): Depend on check-tapset-probes check-tapset-jstack.
	* test/tapset/jstaptest.pl (process_args): Add -p [$run_test_probes]
	and -j [$run_test_jstack].
	(test_jstack): Takes argument to pass to java process.
	Pass -XX:+UseCompressedOops and/or -Xmx5G.

2012-06-26  Omair Majid  <omajid@redhat.com>

	* test/tapset/jstaptest.pl (get_arch_dir): Fix dir for x86.

2012-03-26  Mark Wielaard  <mjw@redhat.com>

	* test/tapset/jstaptest.pl: thread_start and thread_stop thread id
	can be any positive number.

2012-03-23  Mark Wielaard  <mjw@redhat.com>

	* test/tapset/jstaptest.pl: Add jstack tests.

2015-03-04  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	* Makefile.am:
	(clean-tests): Add dependency on clean-jtreg-reports.
	(clean-local): Drop clean-jtreg-reports.
	* NEWS: Updated.

2012-03-23  Jon VanAlten  <jon.vanalten@redhat.com>

	* Makefile.am:
	(check-local): Depend on check-tapset.
	(clean-tests): New target to group test cleanup
	rules.
	(clean-local): Depend on clean-tests rather than
	clean-jtreg.
	(.PHONY): Add clean-tests and clean-tapset-report.
	(check-tapset): Add target to run tapset tests.
	(clean-tapset-report): Cleanup tapset test output.
	* tapset/hotspot_jni.stp.in:
	Add notes regarding required JVM option to Get<PrimitiveType>Field
	family of probe aliases.
	* test/tapset/ClassUnloadedProbeTester.java:
	Part of test coverage for hotspot.stp and hotspot_jni.stp tapsets.
	* test/tapset/JNIStapTest.c:
	Likewise.
	* test/tapset/JNITestClass.c:
	Likewise.
	* test/tapset/JNITestClass.h:
	Likewise.
	* test/tapset/JNITestClass.java:
	Likewise.
	* test/tapset/RunWrapper.java:
	Likewise.
	* test/tapset/StapJNIClassLoader.java:
	Likewise.